--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
       <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
-      <title>Spring Boot WebSocket Chat Application</title>
+      <title>::Aratai::</title>
       <link rel="stylesheet" href="/css/main.css" />
   </head>
   <body>
@@ -27,13 +27,13 @@
     <div id="chat-page" class="hidden">
         <div class="chat-container">
             <div class="chat-header">
-                <h2>Spring WebSocket Chat Demo</h2>
+                <h2>Aratai</h2>
             </div>
             <div class="connecting">
                 Connecting...
             </div>
             <ul id="messageArea">
-
+	
             </ul>
             <form id="messageForm" name="messageForm">
                 <div class="form-group">
